--- a/detail-story/src/main/res/values-in/strings.xml
+++ b/detail-story/src/main/res/values-in/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="back">Back</string>
-    <string name="story_image">Story image</string>
-    <string name="something_went_wrong">Something went wrong</string>
+    <string name="back">Kembali</string>
+    <string name="story_image">Gambar Story</string>
 </resources>
