--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="home">Home</string>
     <string name="profile">Profile</string>
     <string name="add_story">Add Story</string>
+    <string name="stories_location">Stories Location</string>
 </resources>
